# CppTaskManager

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
example/: main.cpp  safe_example.cpp
src/: ThreadPool.cpp  ThreadPool.h
